# LLM

./: .env.example  .env.production  .gitignore  .gitpod.yml  .jetbrains-ai-mcp-config.json  .mcp.json  .npmrc  AI_REVIEW_FIXES_SUMMARY.md  AUDIT_IMPLEMENTATION_SUMMARY.md  BRANCH_CONSOLIDATION_SUMMARY.md  CLAUDE.md  CONFIGURATION_GUIDE.md  CONSOLIDATION_VERIFICATION.md  CONTRIBUTING.md  DOCKER_QUICK_START.md  Dockerfile  Dockerfile.lambda  FINAL-PRODUCTION-STATUS-2025-11-13.md  FINAL_CONSOLIDATION_REPORT.md  GITHUB_SECRETS.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_CONFIG.md  KALI-MCP-DEPLOYMENT-VERIFICATION-2025-11-13.md  KALI-MCP-READY.md  MCP-DOCTOR-DEPLOYMENT-COMPLETE.md  MCP-UNIFIED-ORCHESTRATOR-DOCS.md  MCP_TOOL_CHAIN_DIAGRAM.md  MCP_TOOL_INVENTORY.md  Makefile  NPM_EXIT_CODE_PERMANENT_FIX.md  NPM_QUICK_FIX.txt  NPM_SCRIPTS_ENHANCEMENT_SUMMARY.md  NPM_SCRIPTS_PROJECT_FINAL.md  NPM_SCRIPTS_QUICK_REFERENCE.md  NPM_SCRIPTS_REFACTORING_SUMMARY.md  PERFORMANCE_OPTIMIZATION_SUMMARY.md  PRODUCTION-DEPLOYMENT-COMPLETE-2025-11-13.md  PRODUCTION-STATUS-FINAL.md  PRODUCTION-VERIFICATION-COMPLETE-2025-11-13.md  QUICK-START-PRODUCTIVITY-TOOLS.md  (+71 more)
.claude/: settings.json
.devcontainer/: Dockerfile  README.md  devcontainer.json
.github/: copilot-instructions.md
LLM/: .npmignore  Dockerfile.aws-mcp  Dockerfile.terraform-mcp  MCP_SYSTEM_COMPLETE.md  README.md  docker-compose.aws-terraform-mcp.yml  package-lock.json  package.json  serve-unified-inspector.js  start-mcp-system.bat  stop-mcp-system.bat  validate-mcp-production.js
config-backups/: .mcp.json.backup  .mcp.json.backup-20251109-195427  .mcp.json.backup-20251109-214633  settings.json.backup  (+5 more)
omnipotent-mcp/: DELIVERY_VERIFICATION.md  INSTALLATION_COMPLETE.md  INTEGRATION-COMPLETE.md  QUICK_REFERENCE.md  README.md  TEST_WITH_INSPECTOR.md  USAGE_GUIDE.md  claude_desktop_config.json  hello.py  pyproject.toml  server.py  server_enhanced.py  server_optimized.py  server_production.py  server_ultra_optimized.py  test_server.py
(+464 files in other folders)
