[project]
name = "omnipotent-mcp"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.72.0",
    "beautifulsoup4>=4.14.2",
    "docker-py>=1.10.6",
    "gitpython>=3.1.45",
    "httpx>=0.28.1",
    "kubernetes>=34.1.0",
    "mcp[cli]>=1.21.0",
    "openai>=2.7.1",
    "paramiko>=4.0.0",
    "playwright>=1.55.0",
    "psutil>=7.1.3",
    "pymongo>=4.15.3",
    "redis>=7.0.1",
    "requests>=2.32.5",
    "schedule>=1.2.2",
    "selenium>=4.32.0",
    "sqlalchemy>=2.0.44",
]
